@@ -6,11 +6,5 @@ Zarządzanie Paletami to prosta aplikacja napisana w języku Java, służąca do
 - **Java Development Kit (JDK)** - wersja 8 lub nowsza (zalecana 17 lub nowsza),
 - **Git** - do pobrania kodu z repozytorium,
 
-### Instalacja
-- Po zainstalowaniu Git w terminalu wykonaj polecenie `git clone https://github.com/czesctuklap/zarzadzanie-paletami.git`
-- Przejdź do katalogu projektu `cd zarzadzanie-paletami` oraz do folderu z kodem źródłowym `cd src`
-- Skompiluj pliki za pomocą polecenia `javac *.java`
-- Uruchom aplikację wykonując `java MainApplication`
 
 
-//javac --module-path "C:\Users\zuzia\JavaFX\javafx-sdk-23.0.1\lib" --add-modules javafx.controls,javafx.fxml -d out *.java
